# vetty

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  node_out.txt  ps_out.txt  rustfmt.toml  test_agent.sh  test_bind.py  test_connect.py  vite_out.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/vetty-agent/: Cargo.toml
crates/vetty-agent/src/: main.rs  strace_parser.rs  test_regex.rs  vsock_client.rs
crates/vetty-cli/: Cargo.toml
crates/vetty-cli/src/: main.rs
crates/vetty-common/: Cargo.toml
crates/vetty-common/src/: http.rs  lib.rs
crates/vetty-daemon/: Cargo.toml
crates/vetty-daemon/src/: events.rs  main.rs  proxy.rs  rest.rs  vsock.rs  ws.rs
crates/vetty-disk/: Cargo.toml
crates/vetty-disk/src/: lib.rs
crates/vetty-vm/: Cargo.toml
crates/vetty-vm/src/: config.rs  lib.rs  serial.rs
docs/: 00-overview.md  01-workspace-and-common.md  02-disk-builder.md  03-guest-agent.md  04-vm-launcher.md  05-host-daemon.md  06-cli.md  07-guest-scripts-and-rootfs.md  08-gui.md  09-integration-and-testing.md  10-running.md  11-arguments.md  12-https-interception.md  ARCHITECTURE.md
guest/: init.sh  vetty-run.sh
guest/overrides/pythonpath/: httplib.py
guest/overrides/pythonpath/http/: client.py
gui/: README.md  index.html  package-lock.json  package.json  test.sh  vite.config.ts
gui/electron/: main.cjs  preload.cjs
gui/src/: App.css  App.tsx  index.css  types.ts  vetty-config.d.ts
gui/src/components/: DetailPane.tsx  EventTimeline.tsx  FilterBar.tsx  Sidebar.tsx
gui/src/hooks/: useEventStream.ts
image/: build-rootfs.sh  download-kernel.sh  download-rootfs.sh
sample-code/: README.md  my-file.py  test-http.sh
scripts/: run-all.sh  vetty-mitmproxy-addon.py
test_regex/: test_regex2.rs
