[package]
name = "vetty-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vetty-common = { path = "../vetty-common" }
anyhow = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
socket2 = { workspace = true }
hostname = { workspace = true }
