[package]
name = "vetty-vm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vetty-common = { path = "../vetty-common" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tempfile = { workspace = true }
nix = { workspace = true }
